#64 route GET /kmeans/centroids now returns the current amount of centroids
